--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,18 @@ name = "comparison"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
+    "click>=8.2.0",
     "jupyterlab>=4.4.0",
     "lpips>=0.1.4",
     "matplotlib>=3.10.1",
     "opencv-python>=4.11.0.86",
     "pydicom>=3.0.1",
+    "scikit-image>=0.25.2",
+    "scipy>=1.15.2",
     "timm>=1.0.15",
-    "torch>=2.6.0",
+    "torch>=2.7.0",
+    "torchmetrics>=1.7.1",
     "torchvision>=0.21.0",
 ]
